syntax = "proto3";
option csharp_namespace = "phoenix";
option go_package = "./models";
package phoenix;

enum eBusinessModule {
   BusinessModule_None = 0;
   BusinessModule_PPV = 1;
   BusinessModule_Subscription = 2;
}

